# sqlite-minutils

./: CHANGELOG.md  README.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
sqlite-minutils/: __init__.py
sqlite_minutils/: __init__.py  _modidx.py  db.py  utils.py
tests/: README.md  conftest.py  test_attach.py  test_column_affinity.py  test_constructor.py  test_conversions.py  test_create.py  test_create_view.py  test_delete.py  test_duplicate.py  test_extract.py  test_extracts.py  test_get.py  test_hypothesis.py  test_lookup.py  test_m2m.py  test_query.py  test_recreate.py  test_register_function.py  test_rows.py  test_rows_from_file.py  test_suggest_column_types.py  test_transform.py  test_update.py  test_upsert.py  test_utils.py  test_wal.py
