[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite_minutils"
version = "3.36"
description = "A fork of sqlite-utils with CLI etc removed"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jeremy Howard", email = "info@fast.ai" }
]
requires-python = ">=3.7, <4"
dependencies = [ "fastcore" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
