[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="sqlite-minutils"
dynamic = ["version"]
description = "A fork of sqlite-utils with CLI etc removed"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["fastcore"]

[project.urls]
Repository = "https://github.com/AnswerDotAI/sqlite-minutils"
Documentation = "https://AnswerDotAI.github.io/sqlite-minutils"

[project.entry-points.nbdev]
sqlite_minutils = "sqlite_minutils._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "sqlite_minutils.__version__"}

[tool.setuptools.packages.find]
include = ["sqlite_minutils"]

[tool.nbdev]
custom_sidebar = false
